<resources>
    <string name="app_name">FitnessApp</string>
    <string name="menu_logout">Log Out</string>

    <!--Register-->
    <string name="register_title">Welcome, please register your credentials</string>
    <string name="register_username">Input Username</string>
    <string name="register_password">Input Password</string>
    <string name="register_btn_register">Register now!</string>
    <string name="error_while_registering">Register was not made successfully</string>
    <string name="success_while_registering">User registered with success</string>
    <string name="usernameExists">This username is used once</string>
    <string name="username_field_empty">Please fill username field</string>
    <string name="password_field_empty">Please fill password field</string>

    <!--Login-->
    <string name="login_title">Please insert your credentials</string>
    <string name="login_username">Input Username</string>
    <string name="login_password">Input Password</string>
    <string name="login_text_desc">or</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_register">Register</string>
    <string name="incorrect_credentials">Username or Password are incorrect</string>
    <string name="logged_successfully">You are logged successfully</string>

    <string name="daily_message">Hi %s! Stay healthy</string>
    <string name="daily_distance">%.1f mi</string>
    <string name="daily_time_data">%d min</string>
    <string name="achievement_title">Achievement</string>
    <string name="achievement_message">You have %d milestones of 1000 feet. Stay healthy!</string>
    <string name="main_activity_leaderboard">LeaderBoard</string>
    <string name="main_activity_start_walk">Let\'s start walking</string>

    <string name="walk_activity_start_walk">Start walking</string>

    <string name="distance_label">Distance:</string>
    <string name="time_label">Time:</string>
    <string name="total_time_label">Total Time:</string>
    <string name="start_walk">Start Walk</string>
    <string name="stop_walk">Stop Walk</string>

    <string name="daily_distance_label">0.0 mi</string>
    <string name="daily_time_data_label">0 min</string>
    <string name="walking_distance_label">0.0 mi</string>
    <string name="walking_time_label">0:0:0</string>

    <string name="leaderboard_username">Username: %s!</string>
    <string name="leaderboard_distance">Distance: %.1f mi </string>
    <string name="leaderboard_time">Time: %d min </string>
    <string name="leaderboard_rank"> 1 </string>

    <string name="notification_message">Go for a walk today.</string>
    <string name="save_walk_data_title">Walk Activity</string>
    <string name="save_walk_data_message">Save walk activity data</string>
    <string name="dismiss_walk_data">Dismiss</string>
    <string name="save_walk_data">Save</string>

    <string name="permission_denied">Permission denied to access location</string>

    <!--Twitter Impl-->
    <string name="twitter_consumer_key">E3pIOfBTiIkuKoCJ6KfBMM56k</string>
    <string name="twitter_consumer_secret">gahoG5q4NbH1c6c45kbbbccLJLMaEv2rIhkhKq0WxpznnMojeQ</string>
    <string name="twitter_error_response">Error during Authentication</string>

    <!--back4app is used for authentication-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">uU6iYrVq08rZFvYujFvSnmmWhi3Ckpn4gvvluUwr</string>
    <string name="back4app_client_key">xFjj2JrsDXVoEnk20ClN2pkxd7jVFuf8NrNeFJAa</string>

</resources>
